--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\CANAL ASESORES LTDA\\AppData\\Roaming\\NetBeans\\27\\tomcat101.properties
-j2ee.server.home=C:/Users/CANAL ASESORES LTDA/Downloads/apache-tomcat-10.1.48
-j2ee.server.instance=tomcat101:home=C:\\Users\\CANAL ASESORES LTDA\\Downloads\\apache-tomcat-10.1.48
+deploy.ant.properties.file=C:\\Users\\LENOVO LOQ\\AppData\\Roaming\\NetBeans\\27\\tomcat101.properties
+j2ee.server.home=C:/apache-tomcat-10.1.49
+j2ee.server.instance=tomcat101:home=C:\\apache-tomcat-10.1.49
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome.INTEGRATED
-user.properties.file=C:\\Users\\CANAL ASESORES LTDA\\AppData\\Roaming\\NetBeans\\27\\build.properties
+user.properties.file=C:\\Users\\LENOVO LOQ\\AppData\\Roaming\\NetBeans\\27\\build.properties
