--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -2,6 +2,9 @@ libs.CopyLibs.classpath=\
     ${base}/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar
 libs.CopyLibs.displayName=CopyLibs Task
 libs.CopyLibs.prop-version=3.0
+libs.Gson.classpath=\
+    ${base}/Gson/gson-2.10.1-javadoc.jar
+libs.Gson.displayName=Gson
 libs.jakarta.classpath=\
     ${base}/jakarta/jakarta.servlet-api-5.0.0.jar
 libs.jakarta.displayName=jakarta
