--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,7 +37,8 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${libs.MySQL.classpath}:\
-    ${libs.jakarta.classpath}
+    ${libs.jakarta.classpath}:\
+    ${libs.Gson.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
